# Bazel-iOS-Sandbox

./: .bazelrc  .gitignore  MODULE.bazel  README.md
Modules/: modules.bzl
Modules/ModuleA/: BUILD.bazel
Modules/ModuleA/Example/: AppDelegate.swift
Modules/ModuleA/Sources/: Bar.h  Bar.m  Foo.swift
Modules/ModuleA/Tests/: Test.swift
Modules/ModuleB/: BUILD.bazel
Modules/ModuleB/Example/: AppDelegate.swift  Info.plist
Modules/ModuleB/Sources/: Bar.h  Bar.m
Modules/ModuleB/Tests/: Test.swift
Modules/ModuleC/: BUILD.bazel
Modules/ModuleC/Example/: AppDelegate.swift
Modules/ModuleC/Sources/: Bar.h  Bar.m
Modules/ModuleC/Tests/: Test.swift
