module(
    name = "bazel_sandbox",
    version = "1.0",
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "2.6.0",
    repo_name = "rules_xcodeproj",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_swift",
    version = "2.1.1",
    repo_name = "build_bazel_rules_swift",
)

# Add support for mixed_language rule
git_override(
    module_name = "rules_swift",
    remote = "https://github.com/Subito-it/rules_swift",
    commit = "19b6a23d60a600b05ed2be19a6802ef36f241043",
)
bazel_dep(
    name = "rules_apple",
    version = "3.8.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_swift_package_manager",
    version = "0.36.0",
    repo_name = "rules_swift_package_manager",
)
bazel_dep(
    name = "gazelle",
    version = "0.38.0",
    repo_name = "gazelle",
)

# As per https://github.com/bazelbuild/apple_support#toolchain-setup
bazel_dep(
    name = "apple_support",
    version = "1.16.0",
    repo_name = "build_bazel_apple_support",
)
