module(
    name = "bazel_sandbox",
    version = "1.0",
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "2.6.0",
    repo_name = "rules_xcodeproj",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_swift",
    version = "2.1.1",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_apple",
    version = "3.8.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "apple_support",
    version = "1.16.0",
    repo_name = "build_bazel_apple_support",
)
